syntax = "proto3";
package shared;

option go_package = "Reactive-Welfare-Housing-System/src/messages/sharedMessages";

import "github.com/ChaokunChang/protoactor-go/actor/protos.proto";

message NewHouses {
    repeated NewHouse Houses = 1;
}

message NewHouse {
    int32 ID = 1;
    int32 Level = 2;
    int32 Age = 3;
    int32 Area = 4;
}

message ManagerConnect {
    actor.PID Sender = 1;
}

message DistributorConnect {
    actor.PID Sender = 1;
}

message ExaminationList {
    repeated int32 HouseID = 1;
}

message VerifierConnect {
    actor.PID Sender = 1;
}

message NewRequests {
    repeated NewRequest Requests = 1;
}

message NewRequest {
    int32 FamilyID = 1;
    int32 Level = 2;
}

message NewCheckOuts {
    repeated NewCheckOut CheckOuts = 1;
}

message NewCheckOut {
    int32 FamilyID = 1;
    int32 Level = 2;
}